--- a/index.html
+++ b/index.html
@@ -8,39 +8,47 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="calculator-box">
-        <div class="display">
-            <input type="text" name="formula" id="formula" disabled>
-            <br>
-            <span id="copy-button" title="Copy" onclick="copyAnswer()"><i class="fa-regular fa-copy"></i></span>
-            <input type="text" name="answer" id="answer" value="0" disabled>
+    <div class="navBar">
+        <ul>
+            <li><a href="index.html">Calculator</a></li>
+            <li><a href="table.html">Table</a></li>
+        </ul>
+    </div>
+    <div class="container">
+        <div class="calculator-box">
+            <div class="display">
+                <input type="text" name="formula" id="formula" disabled>
+                <br>
+                <span id="copy-button" title="Copy" onclick="copyAnswer()"><i class="fa-regular fa-copy"></i></span>
+                <input type="text" name="answer" id="answer" value="0" disabled>
+            </div>
+            <table cellpadding="0" cellspacing="5">
+                <tr>
+                    <td><input type="button" id="" value="1" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="2" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="3" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="+" onclick="calculate(this.value)"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" id="" value="4" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="5" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="6" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="-" onclick="calculate(this.value)"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" id="" value="7" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="8" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="9" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="*" onclick="calculate(this.value)"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" id="" value="C" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="0" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="=" onclick="calculate(this.value)"></td>
+                    <td><input type="button" id="" value="/" onclick="calculate(this.value)"></td>
+                </tr>
+            </table>
         </div>
-        <table cellpadding="0" cellspacing="5">
-            <tr>
-                <td><input type="button" id="" value="1" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="2" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="3" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="+" onclick="calculate(this.value)"></td>
-            </tr>
-            <tr>
-                <td><input type="button" id="" value="4" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="5" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="6" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="-" onclick="calculate(this.value)"></td>
-            </tr>
-            <tr>
-                <td><input type="button" id="" value="7" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="8" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="9" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="*" onclick="calculate(this.value)"></td>
-            </tr>
-            <tr>
-                <td><input type="button" id="" value="C" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="0" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="=" onclick="calculate(this.value)"></td>
-                <td><input type="button" id="" value="/" onclick="calculate(this.value)"></td>
-            </tr>
-        </table>
     </div>
     <script src="calcScript.js"></script>
 </body>
