--- a/table.html
+++ b/table.html
@@ -15,10 +15,10 @@
         </ul>
     </div>
     <div class="container">
-        <div class="table-box">
+        <div class="table-box" id="render-table">
             
         </div>
     </div>
-    <script src="calcScript.js"></script>
+    <script src="tableScript.js"></script>
 </body>
 </html>
