--- a/bootstrap.html
+++ b/bootstrap.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css"/>
     <title>Bootstrap</title>
 </head>
 <body>
+  <div class="navBar">
+    <ul>
+        <li><a href="index.html">Calculator</a></li>
+        <li><a href="table.html">Table</a></li>
+        <li><a href="bootstrap.html">Bootstrap Template</a></li>
+    </ul>
+  </div>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand">Navbar</a>
