--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="index.html">Calculator</a></li>
             <li><a href="table.html">Table</a></li>
+            <li><a href="bootstrap.html">Bootstrap Template</a></li>
         </ul>
     </div>
     <div class="container">
