Payment button added

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -36,7 +36,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Special title treatment</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repudiandae praesentium aperiam veritatis numquam corporis corrupti, error consequuntur quo, consectetur delectus accusantium autem nesciunt in rerum animi eveniet ea earum quidem? Eveniet?</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="upi://pay?pa=yourUPIid@ybl&am=400&cu=INR" class="btn btn-primary">Pay now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
                       2 days ago
